0429 繼續弄status的問題……

--- a/www/about.html
+++ b/www/about.html
@@ -50,7 +50,7 @@
     
     <ons-list modifier="inset" style="margin-top: 10px">
 
-        <ons-list-item modifier="chevron" onclick="window.open('http://pulipuli.blogspot.tw', '_system')">
+        <ons-list-item modifier="chevron" onclick="window.open('http://blog.pulipuli.info', '_system')">
             <ons-icon icon="ion-social-rss" size="20px"></ons-icon>
             {{ 'VISIT_BLOG' | translate}}
         </ons-list-item>
