--- a/www/note_list_view.html
+++ b/www/note_list_view.html
@@ -20,7 +20,7 @@
              ng-click="ctl_target.enter_for_view()"
              ng-show="!CONFIG.control_group_version">
             {{ ctl_target.menu_display_target("take_note", ctl_target.status.take_note.done, ctl_target.status.take_note.target) }}
-            <ons-icon icon="ion-checkmark-circled" fixed-width="true"
+            <ons-icon icon="ion-android-star" fixed-width="true"
                            ng-show="ctl_target.is_all_finish('take_note')"></ons-icon>
         </div>
     </ons-toolbar>
