--- a/www/target_recommend.html
+++ b/www/target_recommend.html
@@ -31,7 +31,7 @@
                     </ons-col>
                     <ons-col width="50" style="text-align: right"  ng-show="(ctl_target.get_max_target(setting.key) === 0)">
                         已經全部完成 
-                        <ons-icon icon="ion-checkmark-circled" fixed-width="true"></ons-icon>
+                        <ons-icon icon="ion-android-star" fixed-width="true"></ons-icon>
                         <!-- @TODO 語系 -->
                     </ons-col>
                 </ons-row>
