--- a/www/target_view.html
+++ b/www/target_view.html
@@ -24,7 +24,7 @@
 
                 <ons-col width="50" style="text-align: right">
                     {{ ctl_target.display_target(setting.key, data.done, data.target) }}
-                    <ons-icon icon="ion-checkmark-circled" fixed-width="true"
+                    <ons-icon icon="ion-android-star" fixed-width="true"
                               ng-show="ctl_target.is_all_finish(setting.key)"></ons-icon>
                 </ons-col>
             </ons-row>
