--- a/www/learn_flashcard_transition.html
+++ b/www/learn_flashcard_transition.html
@@ -19,7 +19,7 @@
                   ng-show="!CONFIG.control_group_version">
                 <!-- {{ _target_data.done}} / {{ _target_data.target}} -->
                 {{ ctl_target.menu_display_target("learn_flashcard", _target_data.done, _target_data.target) }}
-                <ons-icon icon="ion-checkmark-circled" fixed-width="true"
+                <ons-icon icon="ion-android-star" fixed-width="true"
                            ng-show="ctl_target.is_all_finish('learn_flashcard')"></ons-icon>
             </span>
 
