--- a/www/test_select.html
+++ b/www/test_select.html
@@ -23,7 +23,7 @@
              ng-click="ctl_target.enter_for_view()"
              ng-show="!CONFIG.control_group_version">
             {{ ctl_target.menu_display_target("test_select", _target_data.done, _target_data.target) }}
-                <ons-icon icon="ion-checkmark-circled" fixed-width="true"
+                <ons-icon icon="ion-android-star" fixed-width="true"
                            ng-show="ctl_target.is_all_finish('test_select')"></ons-icon>
         </div>
     </ons-toolbar>
