--- a/www/test_select_transition.html
+++ b/www/test_select_transition.html
@@ -21,7 +21,7 @@
              ng-class="{'target-incompleted': (_target_data.done < _target_data.target), 'target-completed': (ctl_target.is_all_finish('test_select'))}"
              ng-show="!CONFIG.control_group_version">
             {{ ctl_target.menu_display_target("test_select", _target_data.done, _target_data.target) }}
-            <ons-icon icon="ion-checkmark-circled" fixed-width="true"
+            <ons-icon icon="ion-android-star" fixed-width="true"
                        ng-show="ctl_target.is_all_finish('test_select')"></ons-icon>
         </div>
     </ons-toolbar>
