--- a/www/note.html
+++ b/www/note.html
@@ -4,7 +4,7 @@
     <ons-toolbar>
 
         <div class="left">
-            <ons-toolbar-button ng-click="app.navi.popPage()">
+            <ons-toolbar-button ng-click="ctl_note.submit($event);">
                 <span class="toolbar-button--quiet navigation-bar__line-height" >
                     <i class="ion-android-arrow-back"></i>
                 </span>
