--- a/www/target_view_page.html
+++ b/www/target_view_page.html
@@ -11,7 +11,8 @@
         
         <div class="center">{{ ctl_target.get_view_title()}}</div>
 
-        <div class="right" ng-click="app.navi.pushPage('target_edit.html')">
+        <div class="right" ng-click="app.navi.pushPage('target_edit.html')" 
+             ng-show="ctl_target.is_all_finish() === false">
             <ons-toolbar-button>
                 <ons-icon icon="ion-edit" fixed-width="true"></ons-icon>
             </ons-toolbar-button>
@@ -22,7 +23,7 @@
 
     <ons-list modifier="inset">
         <ons-list-item ng-repeat="data in ctl_target.status" 
-                       ng-class="{'bg-danger': (data.done < data.target), 'bg-success': (ctl_target.get_max_target(setting.key) === 0)}">
+                       ng-class="{'bg-danger': (data.done < data.target && ctl_target.get_max_target(setting.key) > 0), 'bg-success': (ctl_target.get_max_target(setting.key) === 0)}">
             <ons-row ng-init="setting = ctl_target.var.target_setting[$index]">
                 <ons-col class="title" ng-click="ctl_target.show_help(setting.key)">
                     {{ setting.title}}
@@ -30,7 +31,9 @@
                 </ons-col>
 
                 <ons-col width="50" style="text-align: right">
-                    {{ data.done}} / {{ data.target}}
+                    {{ ctl_target.display_target(setting.key, data.done, data.target) }}
+                    <ons-icon icon="ion-android-star" fixed-width="true"
+                              ng-show="ctl_target.is_all_finish(setting.key)"></ons-icon>
                 </ons-col>
             </ons-row>
         </ons-list-item>
