--- a/www/test_select_transition.html
+++ b/www/test_select_transition.html
@@ -18,9 +18,11 @@
 
         <div class="right"
              ng-init="_target_data = ctl_target.status.test_select" 
-             ng-class="{'target-incompleted': (_target_data.done < _target_data.target)}"
-             ng-show="_target_data.target !== 0 && !CONFIG.control_group_version">
-            {{ _target_data.done}} / {{ _target_data.target}}
+             ng-class="{'target-incompleted': (_target_data.done < _target_data.target), 'target-completed': (ctl_target.is_all_finish('test_select'))}"
+             ng-show="!CONFIG.control_group_version">
+            {{ ctl_target.menu_display_target("test_select", _target_data.done, _target_data.target) }}
+            <ons-icon icon="ion-android-star" fixed-width="true"
+                       ng-show="ctl_target.is_all_finish('test_select')"></ons-icon>
         </div>
     </ons-toolbar>
 
@@ -55,8 +57,7 @@
     <!-- ===================================== -->
         
     <div class="hint">
-        <ons-button  ng-show="ctl_test_select.var.show_note === false"
-                     ng-click="ctl_test_select.var.show_note = true">
+        <ons-button  ng-show="ctl_test_select.var.show_note === false">
             {{ "TEST_SELECT_HINT_BUTTON" | translate }}
         </ons-button>
         <div ng-show="ctl_test_select.var.show_note === true" class="pre">{{ _test_select.note }}</div>
